Changes in version 0.6-8 (2016-03-09)

  o Added Wine data

Changes in version 0.6-7 (2015-04-15)

  o Now use rgl:: in *3d functions and requireNamespace("rgl")
  o import(car)

Changes in version 0.6-6 (2013-06-17)

	o Added vecscale() to more reliably scale the variable vectors in plot.candisc() and heplot.candisc()
	  to the plot bounding box [thx: Uwe Ligges for the code]
	o Exported vecscale
	o Added can_lm() to calculate the canonical lm() representation of a term in an mlm

Changes in Version 0.6-5 (2013-03-20)

	o candisc() now doesn't allow ndim > rank [thx: yu-chuan.chen@stonybrook.edu]
	o In plot.candisc() fixed bug in use of pch and col [thx: dcarlson@tamu.edu] and cleaned up code

Changes in Version 0.6-4 (2013-03-17)

	o Don't use paste0() to avoid dependency on R>2.15.0

Changes in Version 0.6-3 (2013-02-13)

	o Minor documentation changes
	o In cancor(), now handle missing data more flexibly via na.rm= and use=
	o Now suggest corrplot package for cancor.Rd example

Changes in Version 0.6-2 (2013-01-30)

	o Reorganized print() and summary() methods for cancor()
	o Smoothed out documentation
	o Added observation weights to cancor() methods
	o Added ability to plot X and or Y vectors in heplot.cancor()
	o Extended example of plot.cancor(), showing variable vectors for X & Y
	
Changes in Version 0.6-1 (2013-1-23)

	o Continued development of methods and plots for canonical correlation analysis within the
	  HE plot framework:
	o Now export scores() and scores.cancor() method
	o coef.cancor gets a standardize= argument
	o Added redundancy() for redundancy analysis
	o Added a plot.cancor() method, visualizing the relations between the Ycan and Xcan variable scores
	o Added vectors3d()
	o Added heplot3d() method for cancor objects.
	o More significantly, re-implemented cancor() as an S3 generic, with a cancor.formula method and 
	  the original as the cancor.default method.

Changes in Version 0.6-0 (2013-1-20)
